RESOLVED FIXED200079
ASSERTION FAILED: settings().textAutosizingEnabled() && settings().textAutosizingUsesIdempotentMode() in WebCore::Page::recomputeTextAutoSizingInAllFrames()
https://bugs.webkit.org/show_bug.cgi?id=200079
Summary ASSERTION FAILED: settings().textAutosizingEnabled() && settings().textAutosi...
alan
Reported 2019-07-24 08:57:18 PDT
Attachments
Patch (7.19 KB, patch)
2019-07-24 09:07 PDT, alan
no flags
Patch (5.76 KB, patch)
2019-07-24 10:34 PDT, alan
no flags
alan
Comment 1 2019-07-24 09:07:30 PDT
alan
Comment 2 2019-07-24 10:34:00 PDT
WebKit Commit Bot
Comment 3 2019-07-24 11:04:26 PDT
Comment on attachment 374788 [details] Patch Clearing flags on attachment: 374788 Committed r247780: <https://trac.webkit.org/changeset/247780>
WebKit Commit Bot
Comment 4 2019-07-24 11:04:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.